# x_multi_agent

./: .gitmodules  CMakeLists.txt
bindings/: CMakeLists.txt
bindings/src/: x.cpp
bindings/test/: params.yaml  ros_x_bind.py  test_x_vio.py
include/x/camera_models/: camera.h  camera_equidistant.h  camera_fov.h  camera_model.h  types.h
include/x/place_recognition/: place_recognition.h
include/x/tracker/: tracker.h
include/x/vio/: state_manager.h  track_manager.h  types.h  vio.h  vio_updater.h
include/x/vision/: tracker.h
samples/: CMakeLists.txt
samples/ReadBagFile/: CMakeLists.txt  UAV0_params_thermal.yaml  read_bag.cpp
samples/ReadBagFileCollab/: CMakeLists.txt  UAV0_params_thermal.yaml  UAV1_params_thermal.yaml  read_bag_collab.cpp
src/x/place_recognition/: place_recognition.cpp
src/x/tracker/: tracker.cpp
src/x/vio/: track_manager.cpp  vio.cpp  vio_updater.cpp
src/x/vision/: tracker.cpp
